// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Accordion component should match snapshot 1`] = `
<DocumentFragment>
  <div
    class="accordion"
  >
    <div
      class="accordion__header"
      data-testid="toggle-accordion"
    >
      <div
        class="accordion__header-text"
      >
        <p>
          Accordion text 1
        </p>
        <p>
          Accordion text 2
        </p>
      </div>
      <div
        class="icon-button icon-button--accordion"
      >
        <i
          class="material-icons"
        >
          keyboard_arrow_down
        </i>
      </div>
    </div>
    <div
      class="accordion__content-wrapper"
      style="display: none;"
    >
      <div
        class="accordion__content"
      >
        <p>
          Content here. Components can be placed in here if needed
        </p>
        <p>
          Footer can be added below if needed
        </p>
      </div>
      <div
        class="accordion__footer"
      >
        <button
          class="button button--outline button--light button--rounded"
          name="button"
          type="button"
        >
          Cancel
        </button>
        <button
          class="button button--rounded"
          name="button"
          type="button"
        >
          Save
        </button>
      </div>
    </div>
  </div>
</DocumentFragment>
`;

exports[`Accordion component should match snapshot 2`] = `
<DocumentFragment>
  <div
    class="accordion"
  >
    <div
      class="accordion__header"
      data-testid="toggle-accordion"
    >
      <div
        class="icon-button icon-button--accordion"
      >
        <i
          class="material-icons"
        >
          keyboard_arrow_down
        </i>
      </div>
    </div>
    <div
      class="accordion__content-wrapper"
      style="display: none;"
    >
      <div
        class="accordion__content"
      >
        <p>
          Content here. Components can be placed in here if needed
        </p>
        <p>
          Footer can be added below if needed
        </p>
      </div>
      <div
        class="accordion__footer"
      >
        <button
          class="button button--outline button--light button--rounded"
          name="button"
          type="button"
        >
          Cancel
        </button>
        <button
          class="button button--rounded"
          name="button"
          type="button"
        >
          Save
        </button>
      </div>
    </div>
  </div>
</DocumentFragment>
`;
